# daily-coding-problems

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg
daily_coding_problems/: bishops.py  increase_only.py  largest_product.py  lfu_cache.py  linked_list.py  occurrence_in_multiplication_table.py  ordered_matrix.py  perfect_number.py  reverse_linked_list.py
tests/: test_bishop_attacks.py  test_increase_only.py  test_largest_product.py  test_lfu_cache.py  test_occurrence.py  test_perfect_number.py  test_reverse_linked_list.py  test_reverse_list.py  test_sorted_list.py
