[tool.poetry]
name = "daily-coding-problems"
version = "0.1.0"
description = ""
authors = ["jonathandavis805 <jonathan.davis96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.1"
black = "^24.2.0"
autoflake = "^2.2.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
